shift clearing button added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,3 +82,10 @@
         </form>
     </div>
 </div>
+<div class='row'>
+    <div class='col-sm'>
+        <form action="/api/clear/shifts" method="POST">
+            <button type="submit" class="btn btn-outline-danger">Clear shifts</button>
+        </form>
+    </div>
+</div>
