--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -1,6 +1,6 @@
 <div class='row'>
     <div class='col-sm'>
-        <div class="alert alert-secondary" role="alert">
+        <div class="alert alert-success" role="alert">
             Successful posting!
         </div>
         <form action="/">
